[package]
name = "uclock"
version = "0.1.0"
edition = "2021"

[dependencies]
cosmic = { package = "libcosmic", git = "https://github.com/pop-os/libcosmic", features = ["tokio", "wayland", "single-instance"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
zbus = "5"
chrono = "0.4"
once_cell = "1"
futures = "0.3"
